# ShapeStorm

./: .gitignore  Cargo.toml  build.sh  mono_crash.0.0.json  mono_crash.9adc8497e.0.json  mono_crash.9adc8497e.1.json  todo.md
Assets/Scenes/: Main.unity  Mandelbulb.unity  mandelbulb2.unity
Assets/Scripts/: PlayerMaybe.cs  player_maybe.cs
Assets/Scripts/Fractal/: Fractal2.compute  FractalMaster2.cs
Assets/Scripts/SDF/: EnemyMan.cs  GameManager.cs  InputMan.cs  Master.cs  Player.cs  PlayerMovement.cs  Raymarching.compute  RaymarchingLite.compute  Score.cs  Shape.cs  distances.hlsl
ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
build-web/: index.html
old/src/: level.rs
src/: backend_panel.rs  camera.rs  level.rs  level.wgsl  lib.rs  macros.rs  main.rs  primitives.rs  shader1.wgsl  texture.rs  wrap_app.rs
src/apps/: http_app.rs
src/apps/game/: camera.rs  controller.rs  level.rs  lib.rs  macros.rs  main.rs  mod.rs  primitives.rs
src/apps/game/level/: distance.rs  main_shader.wgsl
src/level/: distance.rs  main_shader.wgsl
web/: egui_demo_app_bg.wasm
wegui/: build.sh
wegui/src/: wrap_app.rs
wegui/src/apps/: custom3d_glow.rs  custom3d_wgpu.rs  http_app.rs  mod.rs
wegui/src/apps/game/: singlelevel.rs
wegui/web/: egui_demo_app.js  egui_demo_app_bg.wasm  index.html
