[package]
name = "egui_demo_app"
version = "0.21.0"
rust-version = "1.65"
publish = false
default-run = "egui_demo_app"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["wgpu","http", "persistence"]

http = ["ehttp", "image", "poll-promise", "egui_extras/image"]
persistence = ["eframe/persistence", "egui/persistence", "serde"]
web_screen_reader = ["eframe/web_screen_reader"]                  # experimental
serde = ["dep:serde", "egui/serde"]

glow = ["eframe/glow"]
wgpu = ["eframe/wgpu", "bytemuck"]


[dependencies]
tracing = "0.1"
eframe = { version = "0.21.0" }
egui = "0.21.0"

# Optional dependencies:

bytemuck = { version = "1.7.1", optional = true }
egui_extras = { version = "0.21.0", optional = true }

# feature "http":
ehttp = { version = "0.2.0", optional = true }
image = { version = "0.24", optional = true, default-features = false, features = [
  "jpeg",
  "png",
] }
poll-promise = { version = "0.2", optional = true, default-features = false }

# feature "persistence":
serde = { version = "1", optional = true, features = ["derive"] }

# anyhow = "1.0.68"
# # bytemuck = { version = "1.13", features = [ "derive" ], optional = true }
# env_logger = "0.10.0"
# log = "0.4.17"
# pollster = "0.2.5"
# wgpu = "0.15.1"
# winit = "0.27.5"
# cgmath = "0.18"
# fastrand = "1.9.0"˚

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
